# Metisse

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
autoscript_kernel/: Metis_2_12.py  Template_Metis_2_12.py  metis.py  params.py  template_metis.py
core/: metis.py  params.py  settings.py  template_metis.py
docs/: metis.md  metis_class_methods.md  metis_simplified_chinese.md  metis_traditional_chinese.md  metisse.md  metisse_simplified_chinese.md  metisse_traditional_chinese.md
metis/: metis.py  params.py  settings.py  template_metis.py
metisse/: metisse.py  params.py  settings.py  template_metis.py
pylint/: test_format.py
pytest_metisse/: main.py  test_adb.py  test_additional_coverage.py  test_check_gamelog.py  test_check_image_recognition.py  test_check_image_recognition_multiple.py  test_client_base.py  test_crop_screenshot.py  test_default_tap.py  test_generate_example.py  test_generate_example_funcs.py  test_image_recognition.py  test_metis_log.py  test_metis_path.py  test_metisse_actions.py  test_metisse_class.py  test_metisse_log_file.py  test_metisse_path_subdirs.py  test_metisse_small_methods.py  test_perform_action.py  test_save_screenshot_compression.py  test_script_path.py  test_script_path_functions.py  test_template_metis_class.py  test_ui_client.py  test_wdaclient.py  test_wdaclient_methods.py
test_init/: main.py  test1.py
tutorial/: generate_example.py  script_example.py
unit_tests/: main.py  test_adb.py  (+11 more)
(+68 files in other folders)
